# filtered-sliced-optimal-transport

./: .gitignore  CMakeLists.txt  README.md  render_color_img.py  render_progressive_pointset.py  render_stippling.py  render_two_class_pointset.py
Mains/: filteredSlicedOptimalTrasport.cpp
Math/: VecX.h
Tools/: dimensionsInstantiation.hpp  lodepng.cpp  my_utility.h
Transport/: image_based_sot.h  progressive_sampler.h  slicedOptimalTransportNCube.h  stippling_one_color.h  two_class_example.h
resources/: Hmap.pgm  booby_input_P2.pgm  cbox_0.pgm  cbox_1.pgm  cbox_2.pgm  elephants.pgm  fleur_0.pgm  fleur_1.pgm  fleur_2.pgm  groix_0.pgm  groix_1.pgm  groix_2.pgm  groix_chat_0.pgm  groix_chat_1.pgm  groix_chat_2.pgm  land_0.pgm  land_1.pgm  land_2.pgm  land_3.pgm  land_5.pgm  logo.pgm  memorial_P2.pgm  plitvice_0.pgm  plitvice_1.pgm  plitvice_2.pgm
